Closed
Bug 323318
Opened 20 years ago
Closed 20 years ago
[RFC 2231] when the attachment file name is separated, should append semi-colon(';')
Categories
(MailNews Core :: Attachments, defect, P1)
MailNews Core
Attachments
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla1.8.1
People
(Reporter: obache, Assigned: masayuki)
References
Details
(Keywords: fixed1.8.1, intl, verified1.8.0.2, Whiteboard: Mozilla Japan wants to fix on 1.8 branch and 1.8.0 branch)
Attachments
(1 file)
1.07 KB,
patch
|
jshin1987
:
review+
Bienvenu
:
superreview+
dveditz
:
approval1.8.0.1-
mscott
:
approval1.8.0.2+
mscott
:
approval1.8.1+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/4.0 (compatible; MSIE 6.0; Windows NT 5.1; SV1; .NET CLR 1.1.4322)
Build Identifier: Thunderbird 1.5 (Windows/20051201)
In Content-Disposition header, filename prameter is invalid.
regular-parameter is OK, but extended-parameter is no good.
(semicolon is missing)
So, even if using rfc2231-compliant MUA, filename could'nt be recognized correctly.
Reproducible: Always
Steps to Reproduce:
1. Start to write message
2. Attach file whth long, non-ASCII(ex. japanese, ISO-2022-JP) name.
3. Send message
Actual Results:
Content-Disposition: attachment;
filename*0*=ISO-2022-JP''XXXXXXXXXXXXXX
filename*1*=ZZZZZZZZZZZZZZZZZZZZZZZZZZZ
Expected Results:
Content-Disposition: attachment;
filename*0*=ISO-2022-JP''XXXXXXXXXXXXXX;
filename*1*=ZZZZZZZZZZZZZZZZZZZZZZZZZZZ
RFC2183 says, all parameter=value in Content-Disposition must be separated with ";".
In rfc2231, section 4.1, example:
Content-Type: application/x-stuff
title*0*=us-ascii'en'This%20is%20even%20more%20
title*1*=%2A%2A%2Afun%2A%2A%2A%20
title*2="isn't it!"
This is wrong (author also say).
Assignee | ||
Updated•20 years ago
|
Assignee: mscott → nobody
Component: General → MailNews: Networking
Product: Thunderbird → Core
QA Contact: general → grylchan
Version: unspecified → Trunk
Assignee | ||
Updated•20 years ago
|
Component: MailNews: Networking → MailNews: Attachments
QA Contact: grylchan
Assignee | ||
Comment 1•20 years ago
|
||
jshin:
Could you check this?
Updated•20 years ago
|
Summary: Thunderbird 1.5 is not fully compliant with rfc2231 → Thunderbird 1.5 is not fully compliant with rfc2231 in handling of Content-Disposition header
Assignee | ||
Comment 2•20 years ago
|
||
I don't know this report is correct or is not so, and I don't confirm this, but if this is correct, this should block next release.
Flags: blocking1.8.0.1?
Assignee | ||
Comment 3•20 years ago
|
||
I confirmed this bug.
Severity: normal → major
Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: Windows XP → All
Hardware: PC → All
Updated•20 years ago
|
Severity: major → normal
OS: All → Windows XP
Hardware: All → PC
Assignee | ||
Comment 4•20 years ago
|
||
This creates following header when I attached "あいうえおあいうえおあいうえおあいうえお.png"
Content-Type: image/png;
name*0*=ISO-2022-JP''%1B%24B%24%22%24%24%24%26%24%28%24*%24%22%24%24%24%26;
name*1*=%24%28%24*%24%22%24%24%24%26%24%28%24*%24%22%24%24%24%26%24%28;
name*2*=%24*%1B%28B.png
Content-Transfer-Encoding: base64
Content-Disposition: inline;
filename*0*=ISO-2022-JP''%1B%24B%24%22%24%24%24%26%24%28%24*%24%22%24%24;
filename*1*=%24%26%24%28%24*%24%22%24%24%24%26%24%28%24*%24%22%24%24%24;
filename*2*=%26%24%28%24*%1B%28B.png
Assignee | ||
Updated•20 years ago
|
Assignee | ||
Updated•20 years ago
|
Summary: Thunderbird 1.5 is not fully compliant with rfc2231 in handling of Content-Disposition header → [RFC 2231] when the attachment file name is separated, should append semi-colon(';')
Comment 5•20 years ago
|
||
Comment on attachment 208456 [details] [diff] [review]
Patch rv1.0
Thanks for the patch.
asking for sr and a 1.8.1 at the same time because it's a trivial fix but kinda important in making TB fully compliant to the standard.
I'm not sure which branch (1.8.0.1 or 1.8.0.2) I have to get an approval for to get this patch reflected in the next point release of TB (1.5.1?) It'd be nice if it's also approved for whichever branch it may be.
Attachment #208456 -
Flags: superreview?(bienvenu)
Attachment #208456 -
Flags: review?(bienvenu)
Attachment #208456 -
Flags: review+
Attachment #208456 -
Flags: approval1.8.1?
Assignee | ||
Comment 6•20 years ago
|
||
Comment on attachment 208456 [details] [diff] [review]
Patch rv1.0
Some Japanese MUAs support rfc2231. But some MUAs cannot process current header. It's critical. I think we should fix this in 1.8.0.x too.
Attachment #208456 -
Flags: approval1.8.0.1?
Updated•20 years ago
|
Attachment #208456 -
Flags: superreview?(bienvenu) → superreview+
Assignee | ||
Comment 7•20 years ago
|
||
Thank you David and Jungshik for your r+sr.
Checked-in to Trunk.
-> FIXED
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Whiteboard: Mozilla Japan wants to fix on 1.8 branch and 1.8.0 branch
Updated•20 years ago
|
Flags: blocking1.8.0.2?
Comment 8•20 years ago
|
||
Thunderbird is going to sync up on 1.8.0.2
Flags: blocking1.8.0.2?
Flags: blocking1.8.0.2+
Flags: blocking1.8.0.1?
Flags: blocking1.8.0.1-
Comment 9•20 years ago
|
||
Comment on attachment 208456 [details] [diff] [review]
Patch rv1.0
Moving patch request to 1.8.0.2, too late for 1.8.0.1
Attachment #208456 -
Flags: approval1.8.0.2?
Attachment #208456 -
Flags: approval1.8.0.1?
Attachment #208456 -
Flags: approval1.8.0.1-
Comment 10•20 years ago
|
||
Just to underline previous comments, this is a significant bug that affects builds for the region and therefore *must* be fixed as soon as possible. Let's ensure that it gets into the next stability and security update of Thunderbird.
Comment 11•20 years ago
|
||
This was caused by Bug 193439
Until a fix is released, can't users turn that off via the mail.strictly_mime_parm_folding pref?
Assignee | ||
Comment 12•20 years ago
|
||
Yes. But the buggy mode is used by *default setting*. This gives damage for our marketing. In Japan, many light users doesn't change settings in many applications. And this bug makes trouble on *non-Tunderbird MUA*. So, many Tb users might not know this problem is existing. This is the betrayal to our product users.
Comment 13•20 years ago
|
||
Comment on attachment 208456 [details] [diff] [review]
Patch rv1.0
this has been baking long enough on the trunk, I think it's safe to put on the 1.8.1 branch for Thunderbird 2.
I believe the 1.8.0.x tree is still closed for the Firefox release. Once the tree opens (which should be soon) I'll plus this for the branch too.
Attachment #208456 -
Flags: approval1.8.1? → approval1.8.1+
Comment 14•20 years ago
|
||
I landed this on the 1.8.1 branch for thunderbird 2.
Flags: blocking-thunderbird2+
Keywords: fixed1.8.1
Assignee | ||
Comment 15•20 years ago
|
||
Oops. Thank you for your check-in.
Comment 16•20 years ago
|
||
Comment on attachment 208456 [details] [diff] [review]
Patch rv1.0
approving.
Attachment #208456 -
Flags: approval1.8.0.2? → approval1.8.0.2+
Comment 18•19 years ago
|
||
*** Bug 330664 has been marked as a duplicate of this bug. ***
Assignee | ||
Updated•19 years ago
|
Keywords: fixed1.8.0.2 → verified1.8.0.2
Comment 19•19 years ago
|
||
In Thunderbird 1.5.x change format of attachments:
some old programs (like thebat! 1.4x) don't understand attachments like:
Content-Type: application/msword;
name*0*=UTF-8''%D0%98%D0%BD%D1%81%D1%82%D1%80%D1%83%D0%BA%D1%86%D0%B8%D1;
name*1*=%8F%20%D0%BF%D0%BE%20%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%B5%20%D1;
name*2*=%81%20%D0%BF%D1%80%D0%BE%D0%B3%D1%80%D0%B0%D0%BC%D0%BC%D0%BE%D0;
name*3*=%B9%20SuperMac.doc
Content-Transfer-Encoding: base64
Content-Disposition: inline;
filename*0*=UTF-8''%D0%98%D0%BD%D1%81%D1%82%D1%80%D1%83%D0%BA%D1%86%D0%B8;
filename*1*=%D1%8F%20%D0%BF%D0%BE%20%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%B5;
filename*2*=%20%D1%81%20%D0%BF%D1%80%D0%BE%D0%B3%D1%80%D0%B0%D0%BC%D0%BC;
filename*3*=%D0%BE%D0%B9%20SuperMac.doc
It understand old (1.0.x thunderbird) format only:
Content-Type: application/msword;
name="=?KOI8-R?Q?=E9=CE=D3=D4=D2=D5=CB=C3=C9=D1_=D0=CF_=D2=C1=C2=CF=D4=C5_?==?KOI8-R?Q?=D3_=D0=D2=CF=C7=D2=C1=CD=CD=CF=CA_SuperMac=2Edoc?="
Content-Transfer-Encoding: base64
Content-Disposition: inline;
filename="=?KOI8-R?Q?=E9=CE=D3=D4=D2=D5=CB=C3=C9=D1_=D0=CF_=D2=C1=C2=CF=D4=C5_?==?KOI8-R?Q?=D3_=D0=D2=CF=C7=D2=C1=CD=CD=CF=CA_SuperMac=2Edoc?="
What's to do? How to change new format to old format in fresh thunderbird 1.5.x?
Comment 20•19 years ago
|
||
(In reply to comment #19)
>
>
> What's to do? How to change new format to old format in fresh thunderbird
> 1.5.x?
>
Additional. New format viewing all attachments as messages.wiz files :-(
Updated•17 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•