Bug 323318 [RFC 2231] when the attachment file name is separated, should append semi-colon(';') r=jshin, sr=bienvenu